# async_chess_client

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
assets/: Pixel_Art_Chess_DevilsWorkshop_V03.7z
binaries/piston_and_egui/: egui_launcher.rs  game.rs  main.rs  piston.rs
src/: board.rs  board_container.rs  cacher.rs  chess.rs  coords.rs  egui_launcher.rs  either.rs  error_ext.rs  from_server.rs  game.rs  lib.rs  list_refresher.rs  main.rs  memory_cacher.rs  piston.rs  server_interface.rs  sync_ext.rs  time_based_structs.rs
src/chess/: chess.rs  chess_piece.rs  coords.rs  mod.rs
src/chess/board/: board.rs  board_container.rs  mod.rs
src/chess/boards/: board.rs  board_container.rs
src/net/: list_refresher.rs  mod.rs  server_interface.rs
src/piston_and_egui/: egui_launcher.rs  game.rs  main.rs  piston.rs
src/util/: cacher.rs  error_ext.rs  macros.rs  mod.rs
src/util/time_based_structs/: do_on_interval.rs  memcache.rs  mod.rs  scoped_timers.rs
