[package]
name = "async_chess_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "0.3.0"
piston_window = "0.124.0"
poll-promise = { version = "0.1.0", features = ["tokio"] }
reqwest = { version = "0.11.11", features = ["json"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[features]
