[package]
name = "async_chess_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", features = ["url"] }
directories = "4.0.1"
eframe = { version = "0.18.0", features = ["dark-light"] }
egui = { version = "0.18.1", features = ["tracing"] }
find_folder = "0.3.0"
piston2d-graphics = "0.42.0"
piston_window = "0.124.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"

[features]
